@@ -1,3 +1,7 @@
+2015-10-08  6.9.2-4 Dirk Lemstra <dirk@lem.....org>
+  * Fixed accessing subimage in a TIFF photoshop layer (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28469).
+
 2015-09-25  6.9.2-4 Eric McConville <emcconville@emccon...>
   * Created Manhattan Interpolate method for -sparse-color (reference
     https://github.com/ImageMagick/ImageMagick/pull/36).
